Add index page draft, layout draft and bootstrap.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: url("../images/Shutterstock_709731865_1.jpg");
 }
 
 a {
