Enable login page functionality and add nickname-requiring middleware. Add test rooms.ejs page.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@ Identify yourself!
 <form>
   <div class="mb-3">
     <label for="inputNickname" class="form-label">Nickname</label>
-    <input type="text" id="inputNickname" class="form-control">
+    <input type="text" id="inputNickname" name="nickname" class="form-control" required>
   </div>
   <button type="submit" class="btn btn-primary">Play!</button>
 </form>
