Add missing rooms router.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 Identify yourself!
 
 <%- contentFor('body') %>
-<form>
+<form method="post">
   <div class="mb-3">
     <label for="inputNickname" class="form-label">Nickname</label>
     <input type="text" id="inputNickname" name="nickname" class="form-control" required>
