--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,3 +7,32 @@ body {
 a {
   color: #00B7FF;
 }
+
+.game body {
+  text-align: center;
+}
+.game {
+  width: 800px;
+  height: 800px;
+  margin: auto;
+}
+.game td {
+  border: 2px solid black;
+  width: 33.3333333333%;
+  height: 33.3333333333%;
+  font-size: 150px;
+  text-align: center;
+  margin: auto;
+}
+.game tr:first-child td {
+  border-top: 0;
+}
+.game tr:last-child td {
+  border-bottom: 0;
+}
+.game tr td:first-child {
+  border-left: 0;
+}
+.game tr td:last-child {
+  border-right: 0;
+}
