--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('header') %>
 
 <div style="margin-top: -10px; color: red;">
-    1 : 2
+    <%= score1 %> : <%= score2 %>
 </div>
 <div>
     <%= nickname1 %>
@@ -28,29 +28,36 @@
                 <td id='8'></td>
             </tr>
         </table>
-
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script>
-            room = 'room1'
-            var socket = io.connect()
-            socket.emit('create', [room, 'nickname1', 'nickname2'])
-
-            $('td').click(function() {
-                socket.emit('click', this.id)
-            });
-
-            socket.on('click', function(params) {
-                $('td#' + params[0]).text(params[1])
-            });
-            
-            socket.on('winner', function(params) {
-                alert(params)
-            })
-
-            socket.on('reset', function(){
-                $('td').text('')
-            })
-            
-        </script>
     </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        //var express = require('express')
+        //var router = express.Router()
+
+        room = window.location.href.split('id=')[1];
+        var socket = io.connect()
+        socket.emit('create', [room, 'nickname1', 'nickname2'])
+
+        $('td').click(function() {
+            socket.emit('click', this.id)
+        });
+
+        socket.on('click', function(params) {
+            $('td#' + params[0]).text(params[1])
+        });
+        
+        socket.on('winner', function(params) {
+            router.get('/', function (req, res, next) {
+                params ? score1++ : score2++;
+                res.render('game', {title: 'Game - Tic Tac Toe', nickname1: nickname1, nickname2: nickname2, score1: score1, score2: score2}) 
+            })
+        })
+
+        socket.on('reset', function(){
+            $('td').text('')
+            location.reload()
+        })
+        
+    </script>
+    
