--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
 
-    <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <% /* Place any styles in the page in this section. */ %>
     <%- style %>
 </head>
@@ -13,10 +13,12 @@
 
 <main class="container h-100">
     <div class="row h-100">
-        <div class="col-5 mx-auto align-self-center">
+        <div class="col align-self-center">
             <div class="card border-secondary mb-3">
                 <h3 class="card-header"><%- header %></h3>
-                <%- body %>
+                <div class="card-body">
+                    <%- body %>
+                </div>
             </div>
         </div>
     </div>
