Fix layout.ejs - IMPORTANT!

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
 
-    <link rel="stylesheet" href="stylesheets/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <% /* Place any styles in the page in this section. */ %>
     <%- style %>
 </head>
