--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,7 @@
 <main class="container h-100">
     <div class="row h-100">
         <div class="col align-self-center">
-            <div class="card border-secondary mb-3">
+            <div class="card border-secondary">
                 <h3 class="card-header"><%- header %></h3>
                 <div class="card-body">
                     <%- body %>
@@ -24,8 +24,6 @@
     </div>
 </main>
 
-
-
 <footer>
     <% /*
     Define an optional placeholder for the footer.
@@ -34,6 +32,7 @@
     <%- defineContent('footer') %>
 </footer>
 
+<script src="javascripts/bootstrap/bootstrap.js"></script>
 <% /* Place any scripts contained in views at the end of the page. */ %>
 <%- script %>
 </body>
