--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -2,49 +2,56 @@
 Rooms list
 
 <%- contentFor('body') %>
-    <table>
-        <% rooms.forEach(room => { %>
-        <tr>
-            <td>
-                <form method="get" action="/game/<%= room.replaceAll(' ', '') %>">
-                    <%= room %>
-                    <button class="btn btn-primary">Enter</button>
-                </form>
-            </td>
-        </tr>
-        <% }) %>
-    </table>
-
-<button class="btn btn-primary" id="myBtn">New Room</button>
-
-<div id="myModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <form method="post">
-        <div style="text-align: center;">
-            Enter room name
-            <input type="text" name='RoomName' value="
-            <%= nickname + ' Room' %>
-            ">
-            <button id="AddRoom" class="btn btn-primary">Save</button>
+<div class="row">
+    <div class="col-10">
+        <form method="get" action="/game" id="roomSelectForm">
+            <select class="form-select" name="roomId" id="roomSelect" size="6">
+                <% rooms.forEach(room => { %>
+                    <option value="<%= room.replaceAll(' ', '') %>"><%= room %></option>
+                <% }) %>
+            </select>
+        </form>
+    </div>
+    <div class="col-2 d-flex justify-content-center">
+        <div class="btn-group-vertical w-100" role="group">
+            <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#newRoomModal" id="newRoomBtn">New room</button>
+            <button class="btn btn-outline-primary" form="roomSelectForm" id="joinRoomBtn" disabled>Join room</button>
         </div>
-    </form>
-  </div>
+    </div>
+</div>
+
+<div id="newRoomModal" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Create new room</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post" id="roomNameForm">
+                    <label for="roomNameInput" class="form-label">Room name</label>
+                    <input type="text" class="form-control" id="roomNameInput" name="RoomName" value="<%= nickname + ' Room' %>">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" form="roomNameForm" class="btn btn-primary">Create!</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
-    var modal = document.getElementById("myModal");
-    var btn = document.getElementById("myBtn");
-    var span = document.getElementsByClassName("close")[0];
-    btn.onclick = function() {
-        modal.style.display = "block";
-    }
-    span.onclick = function() {
-        modal.style.display = "none";
-    }
-    window.onclick = function(event) {
-        if (event.target == modal) {
-            modal.style.display = "none";
-        }
-    }
+    var modal = document.getElementById("newRoomModal");
+    var roomNameInput = document.getElementById("roomNameInput");
+    var roomSelect = document.getElementById("roomSelect")
+    var joinRoomBtn = document.getElementById("joinRoomBtn")
+
+    modal.addEventListener('shown.bs.modal', () => {
+        roomNameInput.select()
+    })
+
+    roomSelect.addEventListener('change', () => {
+        joinRoomBtn.disabled = false
+    })
 </script>
