Add refresh button

--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -1,6 +1,12 @@
 <%- contentFor('header') %>
 Rooms list
 
+<div style="float: right;">
+    <button onclick="location.reload()" class="btn btn-secondary"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
+<div>
+
+
+
 <%- contentFor('body') %>
 <div class="row">
     <div class="col-10">
