--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -2,7 +2,8 @@
 Rooms list
 
 <div style="float: right;">
-    <button onclick="location.reload()" class="btn btn-secondary"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
+    <button onclick="location.reload()" class="btn btn-secondary"> Refresh</button>
+    <button onclick="window.location.href='/'" class="btn btn-secondary"> Log out</button>
 <div>
 
 
